--- a/concl.tex
+++ b/concl.tex
@@ -39,7 +39,7 @@ O desenvolvimento do projeto foi dividido em três etapas conforme proposto na me
 	  3-2 & Adaptação da estrutura da rede para uma saída para cada classe.\\
 	  3-3 & Utilização de duas saídas da rede para cada classe. Uma para normalização \\ & utilizando o autovetor e outra para o autovetor oposto.\\
 	  2-3 & Adição de propriedades da imagem pré-normalizada ao descritor de \\ & classificação.\\
-	  3-4 & Implementação da estimativa de angulo utilizando redes neurais com uma \\ & única saída.\\
+	  3-4 & Implementação da estimativa de ângulo utilizando redes neurais com uma \\ & única saída.\\
 	  \hline  	
 	\end{tabular}
 	\fonte{Autoria própria}
