--- a/introducao.tex
+++ b/introducao.tex
@@ -2,7 +2,7 @@
 \chapter{Introdução}
 
 % Por que classificar objetos
-% Por que identificar o angulo
+% Por que identificar o ângulo
 
 Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos \cite{USO-COMPONENTES-ELETRONICOS}, \cite{USO-COMPONENTES-ELETRONICOS-2} a inspeção do acabamento em objetos metálicos \cite{USO-INSPECAO-SUPERFICIES}, a produção de circuitos impressos \cite{USO-INSPECAO-PCB},  \cite{USO-INSPECAO-PCB-2}, entre outros.
 
